--- a/src/stoic.sass
+++ b/src/stoic.sass
@@ -12,8 +12,8 @@ $blue-invert: #fff
 $green: #00bf32
 $green-invert: #fff
 
-$primary: $blue
-$primary-invert: $blue-invert
+$primary: $red
+$primary-invert: $red-invert
 
 $info: $blue
 $info-invert: $blue-invert
