Use redux-api-middleware for api calls

--- a/src/stoic.sass
+++ b/src/stoic.sass
@@ -1,22 +1,16 @@
 @import "./node_modules/bulma/sass/utilities/initial-variables"
 
 $red: #ff1c00
-$red-invert: #fff
 
 $orange: #ff7f00
-$orange-invert: #fff
 
-$blue: #04819e
-$blue-invert: #fff
+$green: #679935
+$blue: #2E4870
+$teal: #287258
 
-$green: #00bf32
-$green-invert: #fff
-
-$primary: $red
-$primary-invert: $red-invert
+$primary: $teal
 
 $info: $blue
-$info-invert: $blue-invert
 $danger: $orange
 $success: $green
 
