Add photo markers to map

--- a/src/stoic.sass
+++ b/src/stoic.sass
@@ -16,3 +16,10 @@ $success: $green
 $body-background: $white
 
 @import "./node_modules/bulma/bulma.sass"
+
+#Gallery img
+  max-width: none
+
+.dropzone
+  .dz-preview.dz-image-preview
+    background: none
