--- a/src/stoic.sass
+++ b/src/stoic.sass
@@ -1,19 +1,17 @@
 @import "./node_modules/bulma/sass/utilities/initial-variables"
 
-$red: #ff1c00
+$color1: rgba(37, 206, 209, 1);
+$color2: rgba(249, 200, 14, 1);
+$color3: rgba(248, 102, 36, 1);
+$color4: rgba(214, 34, 70, 1);
+$color5: rgba(158, 201, 48, 1);
 
-$orange: #ff7f00
-
-$green: #679935
-$blue: #2E4870
-$teal: #287258
-
-$primary: $teal
-
-$info: $blue
-$danger: $orange
-$success: $green
-$body-background: $white
+$primary: $color5
+$primary: #75CFF0
+$info: $color1
+$danger: $color4
+$success: $color5
+$body-background: $color4
 
 @import "./node_modules/bulma/bulma.sass"
 
