Add modal for new content

--- a/src/stoic.sass
+++ b/src/stoic.sass
@@ -21,3 +21,16 @@ $body-background: $color4
 .dropzone
   .dz-preview.dz-image-preview
     background: none
+
+header.nav#map-nav
+  position: absolute
+  width: 100%
+  background-color: rgba($dark, 0.8)
+  box-shadow: none
+
+.rodal-dialog
+  background: none
+  box-shadow: none
+
+.modal-card
+  width: 100%
