Fix modal layering

--- a/src/stoic.sass
+++ b/src/stoic.sass
@@ -27,10 +27,18 @@ header.nav#map-nav
   width: 100%
   background-color: rgba($dark, 0.8)
   box-shadow: none
+  z-index: 500
+
+.rodal
+  z-index: 600
 
 .rodal-dialog
   background: none
   box-shadow: none
+  z-index: 601
 
 .modal-card
   width: 100%
+
+#Gallery
+  height: 100%
